parser.output
Nonterminals useless in grammar

    class_member
    storage_class_specifier
    type_qualifier_list
    identifier_list
    constructor_call


Terminals unused in grammar

    TYPEDEF
    TYPE_NAME
    INVALID


Rules useless in grammar

  214 storage_class_specifier: TYPEDEF
  215                        | STATIC

  216 type_qualifier_list: type_qualifier
  217                    | type_qualifier_list type_qualifier

  218 identifier_list: IDENTIFIER
  219                | identifier_list COMMA IDENTIFIER

  220 constructor_call: CLASS IDENTIFIER IDENTIFIER LPAREN argument_expression_list RPAREN


Rules useless in parser due to conflicts

   44 parameter_type_list: parameter_list

  195 $@4: ε


State 7 conflicts: 1 shift/reduce
State 59 conflicts: 11 reduce/reduce
State 78 conflicts: 1 shift/reduce
State 233 conflicts: 1 shift/reduce
State 235 conflicts: 1 shift/reduce
State 243 conflicts: 32 shift/reduce
State 343 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: global_declaration
    2      | start global_declaration

    3 global_declaration: function_definition
    4                   | declaration
    5                   | class_declaration

    6 function_definition: return_types fun_declarator compound_statement
    7                    | return_types fun_declarator SEMICOLON

    8 declaration: return_types SEMICOLON
    9            | return_types init_declarator_list SEMICOLON

   10 return_types: declaration_specifiers

   11 declaration_specifiers: type_specifier
   12                       | STATIC type_specifier
   13                       | CONST type_specifier
   14                       | STATIC CONST type_specifier

   15 type_specifier: VOID
   16               | CHAR
   17               | INT
   18               | BOOL
   19               | FLOAT
   20               | struct_or_union_specifier
   21               | enum_specifier

   22 type_qualifier: CONST

   23 init_declarator_list: init_declarator
   24                     | init_declarator_list COMMA init_declarator

   25 init_declarator: declarator
   26                | declarator ASSIGN initializer

   27 declarator: pointer direct_declarator
   28           | direct_declarator

   29 direct_declarator: IDENTIFIER
   30                  | direct_declarator LBRACKET INT_LITERAL RBRACKET
   31                  | direct_declarator LBRACKET RBRACKET

   32 fun_declarator: pointer fun_direct_declarator
   33               | fun_direct_declarator

   34 fun_direct_declarator: IDENTIFIER LPAREN parameter_list RPAREN
   35                      | IDENTIFIER LPAREN RPAREN
   36                      | IDENTIFIER LPAREN parameter_type_list RPAREN

   37 declaration_list: declaration
   38                 | declaration_list declaration

   39 initializer: assignment_expression
   40            | LBRACE initializer_list RBRACE
   41            | LBRACE initializer_list COMMA RBRACE

   42 initializer_list: initializer
   43                 | initializer_list COMMA initializer

   44 parameter_type_list: parameter_list
   45                    | parameter_list COMMA ELLIPSIS

   46 parameter_list: parameter_declaration
   47               | parameter_list COMMA parameter_declaration

   48 parameter_declaration: return_types declarator

   49 class_declaration: CLASS IDENTIFIER opt_base_clause LBRACE class_body RBRACE SEMICOLON

   50 opt_base_clause: ε
   51                | COLON base_specifier_list

   52 base_specifier_list: base_specifier
   53                    | base_specifier_list COMMA base_specifier

   54 base_specifier: opt_access_specifier IDENTIFIER

   55 opt_access_specifier: ε
   56                     | PUBLIC
   57                     | PROTECTED
   58                     | PRIVATE

   59 class_body: ε
   60           | class_body member_declaration

   61 member_declaration: declaration
   62                   | statement_list
   63                   | function_definition
   64                   | access_label
   65                   | class_declaration
   66                   | constructor_declaration
   67                   | destructor_declaration

   68 constructor_declaration: IDENTIFIER LPAREN parameter_list RPAREN compound_statement

   69 destructor_declaration: BIT_NOT IDENTIFIER LPAREN RPAREN compound_statement

   70 access_label: PUBLIC COLON
   71             | PROTECTED COLON
   72             | PRIVATE COLON

   73 primary_expression: IDENTIFIER
   74                   | INT_LITERAL
   75                   | FLOAT_LITERAL
   76                   | CHAR_LITERAL
   77                   | STRING_LITERAL
   78                   | NULL_LITERAL
   79                   | BOOLEAN_LITERAL
   80                   | LPAREN expression RPAREN

   81 postfix_expression: primary_expression
   82                   | postfix_expression LBRACKET expression RBRACKET
   83                   | postfix_expression LPAREN RPAREN
   84                   | postfix_expression LPAREN argument_expression_list RPAREN
   85                   | postfix_expression DOT IDENTIFIER
   86                   | postfix_expression ARROW IDENTIFIER
   87                   | postfix_expression INCREMENT
   88                   | postfix_expression DECREMENT

   89 argument_expression_list: assignment_expression
   90                         | argument_expression_list COMMA assignment_expression

   91 unary_expression: postfix_expression
   92                 | INCREMENT unary_expression
   93                 | DECREMENT unary_expression
   94                 | unary_operator cast_expression
   95                 | SIZEOF unary_expression
   96                 | SIZEOF LPAREN type_name RPAREN

   97 unary_operator: BIT_AND
   98               | STAR
   99               | PLUS
  100               | MINUS
  101               | BIT_NOT
  102               | LOGICAL_NOT

  103 cast_expression: unary_expression
  104                | LPAREN type_name RPAREN cast_expression

  105 multiplicative_expression: cast_expression
  106                          | multiplicative_expression STAR cast_expression
  107                          | multiplicative_expression DIVIDE cast_expression
  108                          | multiplicative_expression MOD cast_expression

  109 additive_expression: multiplicative_expression
  110                    | additive_expression PLUS multiplicative_expression
  111                    | additive_expression MINUS multiplicative_expression

  112 shift_expression: additive_expression
  113                 | shift_expression LEFT_SHIFT additive_expression
  114                 | shift_expression RIGHT_SHIFT additive_expression

  115 relational_expression: shift_expression
  116                      | relational_expression LT shift_expression
  117                      | relational_expression GT shift_expression
  118                      | relational_expression LE shift_expression
  119                      | relational_expression GE shift_expression

  120 equality_expression: relational_expression
  121                    | equality_expression EQ relational_expression
  122                    | equality_expression NEQ relational_expression

  123 and_expression: equality_expression
  124               | and_expression BIT_AND equality_expression

  125 exclusive_or_expression: and_expression
  126                        | exclusive_or_expression BIT_XOR and_expression

  127 inclusive_or_expression: exclusive_or_expression
  128                        | inclusive_or_expression BIT_OR exclusive_or_expression

  129 logical_and_expression: inclusive_or_expression
  130                       | logical_and_expression LOGICAL_AND inclusive_or_expression

  131 logical_or_expression: logical_and_expression
  132                      | logical_or_expression LOGICAL_OR logical_and_expression

  133 conditional_expression: logical_or_expression

  134 assignment_expression: conditional_expression
  135                      | unary_expression assignment_operator assignment_expression

  136 assignment_operator: ASSIGN
  137                    | MUL_ASSIGN
  138                    | DIV_ASSIGN
  139                    | MOD_ASSIGN
  140                    | ADD_ASSIGN
  141                    | SUB_ASSIGN
  142                    | LEFT_ASSIGN
  143                    | RIGHT_ASSIGN
  144                    | AND_ASSIGN
  145                    | XOR_ASSIGN
  146                    | OR_ASSIGN

  147 expression: assignment_expression
  148           | expression COMMA assignment_expression

  149 constant_expression: conditional_expression

  150 struct_or_union_specifier: struct_or_union IDENTIFIER LBRACE struct_declaration_list RBRACE
  151                          | struct_or_union IDENTIFIER

  152 struct_or_union: STRUCT
  153                | UNION
  154                | CLASS

  155 struct_declaration_list: struct_declaration
  156                        | struct_declaration_list struct_declaration

  157 struct_declaration: specifier_qualifier_list struct_declarator_list SEMICOLON

  158 specifier_qualifier_list: type_specifier specifier_qualifier_list
  159                         | type_specifier
  160                         | type_qualifier specifier_qualifier_list
  161                         | type_qualifier

  162 struct_declarator_list: struct_declarator
  163                       | struct_declarator_list COMMA struct_declarator

  164 struct_declarator: declarator
  165                  | COLON constant_expression
  166                  | declarator COLON constant_expression

  167 enum_specifier: ENUM LBRACE enumerator_list RBRACE
  168               | ENUM IDENTIFIER LBRACE enumerator_list RBRACE
  169               | ENUM IDENTIFIER

  170 enumerator_list: enumerator
  171                | enumerator_list COMMA enumerator

  172 enumerator: IDENTIFIER
  173           | IDENTIFIER ASSIGN constant_expression

  174 pointer: STAR
  175        | STAR CONST
  176        | STAR pointer
  177        | BIT_AND

  178 type_name: specifier_qualifier_list

  179 statement: labeled_statement
  180          | compound_statement
  181          | expression_statement
  182          | selection_statement
  183          | iteration_statement
  184          | jump_statement
  185          | error SEMICOLON

  186 labeled_statement: IDENTIFIER COLON statement
  187                  | CASE constant_expression COLON statement
  188                  | DEFAULT COLON statement

  189 $@1: ε

  190 compound_statement: LBRACE $@1 RBRACE

  191 $@2: ε

  192 compound_statement: LBRACE $@2 statement_list RBRACE

  193 $@3: ε

  194 compound_statement: LBRACE $@3 declaration_list RBRACE

  195 $@4: ε

  196 compound_statement: LBRACE $@4 declaration_list statement_list RBRACE

  197 statement_list: statement
  198               | statement_list statement

  199 expression_statement: SEMICOLON
  200                     | expression SEMICOLON

  201 selection_statement: IF LPAREN expression RPAREN statement
  202                    | IF LPAREN expression RPAREN statement ELSE statement
  203                    | SWITCH LPAREN expression RPAREN statement

  204 iteration_statement: WHILE LPAREN expression RPAREN statement
  205                    | UNTIL LPAREN expression RPAREN statement
  206                    | DO statement WHILE LPAREN expression RPAREN SEMICOLON
  207                    | FOR LPAREN expression_statement expression_statement RPAREN statement
  208                    | FOR LPAREN expression_statement expression_statement expression RPAREN statement

  209 jump_statement: GOTO IDENTIFIER SEMICOLON
  210               | CONTINUE SEMICOLON
  211               | BREAK SEMICOLON
  212               | RETURN SEMICOLON
  213               | RETURN expression SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256) 185
    INT (258) 17
    FLOAT (259) 19
    CHAR (260) 16
    VOID (261) 15
    BOOL (262) 18
    IF (263) 201 202
    ELSE (264) 202
    FOR (265) 207 208
    WHILE (266) 204 206
    DO (267) 206
    UNTIL (268) 205
    BREAK (269) 211
    CONTINUE (270) 210
    SWITCH (271) 203
    CASE (272) 187
    DEFAULT (273) 188
    SIZEOF (274) 95 96
    TYPEDEF (275)
    STATIC (276) 12 14
    GOTO (277) 209
    CLASS (278) 49 154
    PUBLIC (279) 56 70
    PRIVATE (280) 58 72
    PROTECTED (281) 57 71
    NULL_LITERAL (282) 78
    INCREMENT (283) 87 92
    DECREMENT (284) 88 93
    ARROW (285) 86
    LEFT_SHIFT (286) 113
    RIGHT_SHIFT (287) 114
    LOGICAL_AND (288) 130
    LOGICAL_OR (289) 132
    EQ (290) 121
    NEQ (291) 122
    LE (292) 118
    GE (293) 119
    PLUS (294) 99 110
    MINUS (295) 100 111
    STAR (296) 98 106 174 175 176
    DIVIDE (297) 107
    MOD (298) 108
    ASSIGN (299) 26 136 173
    LT (300) 116
    GT (301) 117
    LOGICAL_NOT (302) 102
    BIT_AND (303) 97 124 177
    BIT_OR (304) 128
    BIT_XOR (305) 126
    BIT_NOT (306) 69 101
    DOT (307) 85
    MUL_ASSIGN (308) 137
    DIV_ASSIGN (309) 138
    MOD_ASSIGN (310) 139
    ADD_ASSIGN (311) 140
    SUB_ASSIGN (312) 141
    LEFT_ASSIGN (313) 142
    RIGHT_ASSIGN (314) 143
    AND_ASSIGN (315) 144
    XOR_ASSIGN (316) 145
    OR_ASSIGN (317) 146
    COLON (318) 51 70 71 72 165 166 186 187 188
    SEMICOLON (319) 7 8 9 49 157 185 199 200 206 209 210 211 212 213
    COMMA (320) 24 41 43 45 47 53 90 148 163 171
    LBRACE (321) 40 41 49 150 167 168 190 192 194 196
    RBRACE (322) 40 41 49 150 167 168 190 192 194 196
    LPAREN (323) 34 35 36 68 69 80 83 84 96 104 201 202 203 204 205 206 207 208
    RPAREN (324) 34 35 36 68 69 80 83 84 96 104 201 202 203 204 205 206 207 208
    LBRACKET (325) 30 31 82
    RBRACKET (326) 30 31 82
    STRUCT (327) 152
    RETURN (328) 212 213
    IDENTIFIER <sval> (329) 29 34 35 36 49 54 68 69 73 85 86 150 151 168 169 172 173 186 209
    INT_LITERAL <ival> (330) 30 74
    BOOLEAN_LITERAL <ival> (331) 79
    FLOAT_LITERAL <fval> (332) 75
    STRING_LITERAL <sval> (333) 77
    CHAR_LITERAL <sval> (334) 76
    TYPE_NAME (335)
    ENUM (336) 167 168 169
    UNION (337) 153
    INVALID (338)
    ELLIPSIS (339) 45
    CONST (340) 13 14 22 175


Nonterminals, with rules where they appear

    $accept (86)
        on left: 0
    start (87)
        on left: 1 2
        on right: 0 2
    global_declaration (88)
        on left: 3 4 5
        on right: 1 2
    function_definition (89)
        on left: 6 7
        on right: 3 63
    declaration (90)
        on left: 8 9
        on right: 4 37 38 61
    return_types <typeinfo> (91)
        on left: 10
        on right: 6 7 8 9 48
    declaration_specifiers <typeinfo> (92)
        on left: 11 12 13 14
        on right: 10
    type_specifier <typeinfo> (93)
        on left: 15 16 17 18 19 20 21
        on right: 11 12 13 14 158 159
    type_qualifier <typeinfo> (94)
        on left: 22
        on right: 160 161
    init_declarator_list <decllist> (95)
        on left: 23 24
        on right: 9 24
    init_declarator <declinfo> (96)
        on left: 25 26
        on right: 23 24
    declarator <declinfo> (97)
        on left: 27 28
        on right: 25 26 48 164 166
    direct_declarator <declinfo> (98)
        on left: 29 30 31
        on right: 27 28 30 31
    fun_declarator <sval> (99)
        on left: 32 33
        on right: 6 7
    fun_direct_declarator <sval> (100)
        on left: 34 35 36
        on right: 32 33
    declaration_list <strlist> (101)
        on left: 37 38
        on right: 38 194 196
    initializer <sval> (102)
        on left: 39 40 41
        on right: 26 42 43
    initializer_list <strlist> (103)
        on left: 42 43
        on right: 40 41 43
    parameter_type_list (104)
        on left: 44 45
        on right: 36
    parameter_list (105)
        on left: 46 47
        on right: 34 44 45 47 68
    parameter_declaration (106)
        on left: 48
        on right: 46 47
    class_declaration <sval> (107)
        on left: 49
        on right: 5 65
    opt_base_clause (108)
        on left: 50 51
        on right: 49
    base_specifier_list (109)
        on left: 52 53
        on right: 51 53
    base_specifier (110)
        on left: 54
        on right: 52 53
    opt_access_specifier (111)
        on left: 55 56 57 58
        on right: 54
    class_body <sval> (112)
        on left: 59 60
        on right: 49 60
    member_declaration (113)
        on left: 61 62 63 64 65 66 67
        on right: 60
    constructor_declaration (114)
        on left: 68
        on right: 66
    destructor_declaration (115)
        on left: 69
        on right: 67
    access_label (116)
        on left: 70 71 72
        on right: 64
    primary_expression <sval> (117)
        on left: 73 74 75 76 77 78 79 80
        on right: 81
    postfix_expression <sval> (118)
        on left: 81 82 83 84 85 86 87 88
        on right: 82 83 84 85 86 87 88 91
    argument_expression_list <strlist> (119)
        on left: 89 90
        on right: 84 90
    unary_expression <sval> (120)
        on left: 91 92 93 94 95 96
        on right: 92 93 95 103 135
    unary_operator <sval> (121)
        on left: 97 98 99 100 101 102
        on right: 94
    cast_expression <sval> (122)
        on left: 103 104
        on right: 94 104 105 106 107 108
    multiplicative_expression <sval> (123)
        on left: 105 106 107 108
        on right: 106 107 108 109 110 111
    additive_expression <sval> (124)
        on left: 109 110 111
        on right: 110 111 112 113 114
    shift_expression <sval> (125)
        on left: 112 113 114
        on right: 113 114 115 116 117 118 119
    relational_expression <sval> (126)
        on left: 115 116 117 118 119
        on right: 116 117 118 119 120 121 122
    equality_expression <sval> (127)
        on left: 120 121 122
        on right: 121 122 123 124
    and_expression <sval> (128)
        on left: 123 124
        on right: 124 125 126
    exclusive_or_expression <sval> (129)
        on left: 125 126
        on right: 126 127 128
    inclusive_or_expression <sval> (130)
        on left: 127 128
        on right: 128 129 130
    logical_and_expression <sval> (131)
        on left: 129 130
        on right: 130 131 132
    logical_or_expression <sval> (132)
        on left: 131 132
        on right: 132 133
    conditional_expression <sval> (133)
        on left: 133
        on right: 134 149
    assignment_expression <sval> (134)
        on left: 134 135
        on right: 39 89 90 135 147 148
    assignment_operator <sval> (135)
        on left: 136 137 138 139 140 141 142 143 144 145 146
        on right: 135
    expression <sval> (136)
        on left: 147 148
        on right: 80 82 148 200 201 202 203 204 205 206 208 213
    constant_expression <ival> (137)
        on left: 149
        on right: 165 166 173 187
    struct_or_union_specifier <sval> (138)
        on left: 150 151
        on right: 20
    struct_or_union <sval> (139)
        on left: 152 153 154
        on right: 150 151
    struct_declaration_list (140)
        on left: 155 156
        on right: 150 156
    struct_declaration (141)
        on left: 157
        on right: 155 156
    specifier_qualifier_list <strlist> (142)
        on left: 158 159 160 161
        on right: 157 158 160 178
    struct_declarator_list <strlist> (143)
        on left: 162 163
        on right: 157 163
    struct_declarator <sval> (144)
        on left: 164 165 166
        on right: 162 163
    enum_specifier <sval> (145)
        on left: 167 168 169
        on right: 21
    enumerator_list <strlist> (146)
        on left: 170 171
        on right: 167 168 171
    enumerator <sval> (147)
        on left: 172 173
        on right: 170 171
    pointer <typeinfo> (148)
        on left: 174 175 176 177
        on right: 27 32 176
    type_name <sval> (149)
        on left: 178
        on right: 96 104
    statement (150)
        on left: 179 180 181 182 183 184 185
        on right: 186 187 188 197 198 201 202 203 204 205 206 207 208
    labeled_statement (151)
        on left: 186 187 188
        on right: 179
    compound_statement (152)
        on left: 190 192 194 196
        on right: 6 68 69 180
    $@1 (153)
        on left: 189
        on right: 190
    $@2 (154)
        on left: 191
        on right: 192
    $@3 (155)
        on left: 193
        on right: 194
    $@4 (156)
        on left: 195
        on right: 196
    statement_list (157)
        on left: 197 198
        on right: 62 192 196 198
    expression_statement (158)
        on left: 199 200
        on right: 181 207 208
    selection_statement (159)
        on left: 201 202 203
        on right: 182
    iteration_statement (160)
        on left: 204 205 206 207 208
        on right: 183
    jump_statement (161)
        on left: 209 210 211 212 213
        on right: 184


State 0

    0 $accept: • start $end

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5
    STATIC  shift, and go to state 6
    CLASS   shift, and go to state 7
    STRUCT  shift, and go to state 8
    ENUM    shift, and go to state 9
    UNION   shift, and go to state 10
    CONST   shift, and go to state 11

    start                      go to state 12
    global_declaration         go to state 13
    function_definition        go to state 14
    declaration                go to state 15
    return_types               go to state 16
    declaration_specifiers     go to state 17
    type_specifier             go to state 18
    class_declaration          go to state 19
    struct_or_union_specifier  go to state 20
    struct_or_union            go to state 21
    enum_specifier             go to state 22


State 1

   17 type_specifier: INT •

    $default  reduce using rule 17 (type_specifier)


State 2

   19 type_specifier: FLOAT •

    $default  reduce using rule 19 (type_specifier)


State 3

   16 type_specifier: CHAR •

    $default  reduce using rule 16 (type_specifier)


State 4

   15 type_specifier: VOID •

    $default  reduce using rule 15 (type_specifier)


State 5

   18 type_specifier: BOOL •

    $default  reduce using rule 18 (type_specifier)


State 6

   12 declaration_specifiers: STATIC • type_specifier
   14                       | STATIC • CONST type_specifier

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5
    CLASS   shift, and go to state 23
    STRUCT  shift, and go to state 8
    ENUM    shift, and go to state 9
    UNION   shift, and go to state 10
    CONST   shift, and go to state 24

    type_specifier             go to state 25
    struct_or_union_specifier  go to state 20
    struct_or_union            go to state 21
    enum_specifier             go to state 22


State 7

   49 class_declaration: CLASS • IDENTIFIER opt_base_clause LBRACE class_body RBRACE SEMICOLON
  154 struct_or_union: CLASS •

    IDENTIFIER  shift, and go to state 26

    IDENTIFIER  [reduce using rule 154 (struct_or_union)]


State 8

  152 struct_or_union: STRUCT •

    $default  reduce using rule 152 (struct_or_union)


State 9

  167 enum_specifier: ENUM • LBRACE enumerator_list RBRACE
  168               | ENUM • IDENTIFIER LBRACE enumerator_list RBRACE
  169               | ENUM • IDENTIFIER

    LBRACE      shift, and go to state 27
    IDENTIFIER  shift, and go to state 28


State 10

  153 struct_or_union: UNION •

    $default  reduce using rule 153 (struct_or_union)


State 11

   13 declaration_specifiers: CONST • type_specifier

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5
    CLASS   shift, and go to state 23
    STRUCT  shift, and go to state 8
    ENUM    shift, and go to state 9
    UNION   shift, and go to state 10

    type_specifier             go to state 29
    struct_or_union_specifier  go to state 20
    struct_or_union            go to state 21
    enum_specifier             go to state 22


State 12

    0 $accept: start • $end
    2 start: start • global_declaration

    $end    shift, and go to state 30
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5
    STATIC  shift, and go to state 6
    CLASS   shift, and go to state 7
    STRUCT  shift, and go to state 8
    ENUM    shift, and go to state 9
    UNION   shift, and go to state 10
    CONST   shift, and go to state 11

    global_declaration         go to state 31
    function_definition        go to state 14
    declaration                go to state 15
    return_types               go to state 16
    declaration_specifiers     go to state 17
    type_specifier             go to state 18
    class_declaration          go to state 19
    struct_or_union_specifier  go to state 20
    struct_or_union            go to state 21
    enum_specifier             go to state 22


State 13

    1 start: global_declaration •

    $default  reduce using rule 1 (start)


State 14

    3 global_declaration: function_definition •

    $default  reduce using rule 3 (global_declaration)


State 15

    4 global_declaration: declaration •

    $default  reduce using rule 4 (global_declaration)


State 16

    6 function_definition: return_types • fun_declarator compound_statement
    7                    | return_types • fun_declarator SEMICOLON
    8 declaration: return_types • SEMICOLON
    9            | return_types • init_declarator_list SEMICOLON

    STAR        shift, and go to state 32
    BIT_AND     shift, and go to state 33
    SEMICOLON   shift, and go to state 34
    IDENTIFIER  shift, and go to state 35

    init_declarator_list   go to state 36
    init_declarator        go to state 37
    declarator             go to state 38
    direct_declarator      go to state 39
    fun_declarator         go to state 40
    fun_direct_declarator  go to state 41
    pointer                go to state 42


State 17

   10 return_types: declaration_specifiers •

    $default  reduce using rule 10 (return_types)


State 18

   11 declaration_specifiers: type_specifier •

    $default  reduce using rule 11 (declaration_specifiers)


State 19

    5 global_declaration: class_declaration •

    $default  reduce using rule 5 (global_declaration)


State 20

   20 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 20 (type_specifier)


State 21

  150 struct_or_union_specifier: struct_or_union • IDENTIFIER LBRACE struct_declaration_list RBRACE
  151                          | struct_or_union • IDENTIFIER

    IDENTIFIER  shift, and go to state 43


State 22

   21 type_specifier: enum_specifier •

    $default  reduce using rule 21 (type_specifier)


State 23

  154 struct_or_union: CLASS •

    $default  reduce using rule 154 (struct_or_union)


State 24

   14 declaration_specifiers: STATIC CONST • type_specifier

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5
    CLASS   shift, and go to state 23
    STRUCT  shift, and go to state 8
    ENUM    shift, and go to state 9
    UNION   shift, and go to state 10

    type_specifier             go to state 44
    struct_or_union_specifier  go to state 20
    struct_or_union            go to state 21
    enum_specifier             go to state 22


State 25

   12 declaration_specifiers: STATIC type_specifier •

    $default  reduce using rule 12 (declaration_specifiers)


State 26

   49 class_declaration: CLASS IDENTIFIER • opt_base_clause LBRACE class_body RBRACE SEMICOLON

    COLON  shift, and go to state 45

    $default  reduce using rule 50 (opt_base_clause)

    opt_base_clause  go to state 46


State 27

  167 enum_specifier: ENUM LBRACE • enumerator_list RBRACE

    IDENTIFIER  shift, and go to state 47

    enumerator_list  go to state 48
    enumerator       go to state 49


State 28

  168 enum_specifier: ENUM IDENTIFIER • LBRACE enumerator_list RBRACE
  169               | ENUM IDENTIFIER •

    LBRACE  shift, and go to state 50

    $default  reduce using rule 169 (enum_specifier)


State 29

   13 declaration_specifiers: CONST type_specifier •

    $default  reduce using rule 13 (declaration_specifiers)


State 30

    0 $accept: start $end •

    $default  accept


State 31

    2 start: start global_declaration •

    $default  reduce using rule 2 (start)


State 32

  174 pointer: STAR •
  175        | STAR • CONST
  176        | STAR • pointer

    STAR     shift, and go to state 32
    BIT_AND  shift, and go to state 33
    CONST    shift, and go to state 51

    $default  reduce using rule 174 (pointer)

    pointer  go to state 52


State 33

  177 pointer: BIT_AND •

    $default  reduce using rule 177 (pointer)


State 34

    8 declaration: return_types SEMICOLON •

    $default  reduce using rule 8 (declaration)


State 35

   29 direct_declarator: IDENTIFIER •
   34 fun_direct_declarator: IDENTIFIER • LPAREN parameter_list RPAREN
   35                      | IDENTIFIER • LPAREN RPAREN
   36                      | IDENTIFIER • LPAREN parameter_type_list RPAREN

    LPAREN  shift, and go to state 53

    $default  reduce using rule 29 (direct_declarator)


State 36

    9 declaration: return_types init_declarator_list • SEMICOLON
   24 init_declarator_list: init_declarator_list • COMMA init_declarator

    SEMICOLON  shift, and go to state 54
    COMMA      shift, and go to state 55


State 37

   23 init_declarator_list: init_declarator •

    $default  reduce using rule 23 (init_declarator_list)


State 38

   25 init_declarator: declarator •
   26                | declarator • ASSIGN initializer

    ASSIGN  shift, and go to state 56

    $default  reduce using rule 25 (init_declarator)


State 39

   28 declarator: direct_declarator •
   30 direct_declarator: direct_declarator • LBRACKET INT_LITERAL RBRACKET
   31                  | direct_declarator • LBRACKET RBRACKET

    LBRACKET  shift, and go to state 57

    $default  reduce using rule 28 (declarator)


State 40

    6 function_definition: return_types fun_declarator • compound_statement
    7                    | return_types fun_declarator • SEMICOLON

    SEMICOLON  shift, and go to state 58
    LBRACE     shift, and go to state 59

    compound_statement  go to state 60


State 41

   33 fun_declarator: fun_direct_declarator •

    $default  reduce using rule 33 (fun_declarator)


State 42

   27 declarator: pointer • direct_declarator
   32 fun_declarator: pointer • fun_direct_declarator

    IDENTIFIER  shift, and go to state 35

    direct_declarator      go to state 61
    fun_direct_declarator  go to state 62


State 43

  150 struct_or_union_specifier: struct_or_union IDENTIFIER • LBRACE struct_declaration_list RBRACE
  151                          | struct_or_union IDENTIFIER •

    LBRACE  shift, and go to state 63

    $default  reduce using rule 151 (struct_or_union_specifier)


State 44

   14 declaration_specifiers: STATIC CONST type_specifier •

    $default  reduce using rule 14 (declaration_specifiers)


State 45

   51 opt_base_clause: COLON • base_specifier_list

    PUBLIC     shift, and go to state 64
    PRIVATE    shift, and go to state 65
    PROTECTED  shift, and go to state 66

    $default  reduce using rule 55 (opt_access_specifier)

    base_specifier_list   go to state 67
    base_specifier        go to state 68
    opt_access_specifier  go to state 69


State 46

   49 class_declaration: CLASS IDENTIFIER opt_base_clause • LBRACE class_body RBRACE SEMICOLON

    LBRACE  shift, and go to state 70


State 47

  172 enumerator: IDENTIFIER •
  173           | IDENTIFIER • ASSIGN constant_expression

    ASSIGN  shift, and go to state 71

    $default  reduce using rule 172 (enumerator)


State 48

  167 enum_specifier: ENUM LBRACE enumerator_list • RBRACE
  171 enumerator_list: enumerator_list • COMMA enumerator

    COMMA   shift, and go to state 72
    RBRACE  shift, and go to state 73


State 49

  170 enumerator_list: enumerator •

    $default  reduce using rule 170 (enumerator_list)


State 50

  168 enum_specifier: ENUM IDENTIFIER LBRACE • enumerator_list RBRACE

    IDENTIFIER  shift, and go to state 47

    enumerator_list  go to state 74
    enumerator       go to state 49


State 51

  175 pointer: STAR CONST •

    $default  reduce using rule 175 (pointer)


State 52

  176 pointer: STAR pointer •

    $default  reduce using rule 176 (pointer)


State 53

   34 fun_direct_declarator: IDENTIFIER LPAREN • parameter_list RPAREN
   35                      | IDENTIFIER LPAREN • RPAREN
   36                      | IDENTIFIER LPAREN • parameter_type_list RPAREN

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5
    STATIC  shift, and go to state 6
    CLASS   shift, and go to state 23
    RPAREN  shift, and go to state 75
    STRUCT  shift, and go to state 8
    ENUM    shift, and go to state 9
    UNION   shift, and go to state 10
    CONST   shift, and go to state 11

    return_types               go to state 76
    declaration_specifiers     go to state 17
    type_specifier             go to state 18
    parameter_type_list        go to state 77
    parameter_list             go to state 78
    parameter_declaration      go to state 79
    struct_or_union_specifier  go to state 20
    struct_or_union            go to state 21
    enum_specifier             go to state 22


State 54

    9 declaration: return_types init_declarator_list SEMICOLON •

    $default  reduce using rule 9 (declaration)


State 55

   24 init_declarator_list: init_declarator_list COMMA • init_declarator

    STAR        shift, and go to state 32
    BIT_AND     shift, and go to state 33
    IDENTIFIER  shift, and go to state 80

    init_declarator    go to state 81
    declarator         go to state 38
    direct_declarator  go to state 39
    pointer            go to state 82


State 56

   26 init_declarator: declarator ASSIGN • initializer

    SIZEOF           shift, and go to state 83
    NULL_LITERAL     shift, and go to state 84
    INCREMENT        shift, and go to state 85
    DECREMENT        shift, and go to state 86
    PLUS             shift, and go to state 87
    MINUS            shift, and go to state 88
    STAR             shift, and go to state 89
    LOGICAL_NOT      shift, and go to state 90
    BIT_AND          shift, and go to state 91
    BIT_NOT          shift, and go to state 92
    LBRACE           shift, and go to state 93
    LPAREN           shift, and go to state 94
    IDENTIFIER       shift, and go to state 95
    INT_LITERAL      shift, and go to state 96
    BOOLEAN_LITERAL  shift, and go to state 97
    FLOAT_LITERAL    shift, and go to state 98
    STRING_LITERAL   shift, and go to state 99
    CHAR_LITERAL     shift, and go to state 100

    initializer                go to state 101
    primary_expression         go to state 102
    postfix_expression         go to state 103
    unary_expression           go to state 104
    unary_operator             go to state 105
    cast_expression            go to state 106
    multiplicative_expression  go to state 107
    additive_expression        go to state 108
    shift_expression           go to state 109
    relational_expression      go to state 110
    equality_expression        go to state 111
    and_expression             go to state 112
    exclusive_or_expression    go to state 113
    inclusive_or_expression    go to state 114
    logical_and_expression     go to state 115
    logical_or_expression      go to state 116
    conditional_expression     go to state 117
    assignment_expression      go to state 118


State 57

   30 direct_declarator: direct_declarator LBRACKET • INT_LITERAL RBRACKET
   31                  | direct_declarator LBRACKET • RBRACKET

    RBRACKET     shift, and go to state 119
    INT_LITERAL  shift, and go to state 120


State 58

    7 function_definition: return_types fun_declarator SEMICOLON •

    $default  reduce using rule 7 (function_definition)

